Update PAAS-TA_JENKINS_SERVICE_USER_GUIDE.md